# cant-hop-game

./: .gitignore  LICENSE  README.md  bun.lockb  eslint.config.js  index.html  package.json
src/: main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ipc.rs  lib.rs  main.rs  service.rs  state.rs  stats.rs  utils.rs
src-tauri/src/ipc/: ai.rs
src-tauri/src/state/: columns.rs  game.rs  logic.rs  player.rs  stats.rs
src/components/Layout/: footer.tsx  index.tsx
src/components/elements/: bar.tsx  form.tsx  icons.tsx  lilypad.tsx  position.tsx  rolling.tsx
src/components/features/: rolling.tsx
src/components/features/rolling/: choice.tsx  dice.tsx  turnStart.tsx
src/hooks/: useAiTurn.ts
src/pages/: Game.tsx  Settings.tsx  Splash.tsx  Stats.tsx  index.ts
src/pages/Game/: board.tsx  gameover.tsx  topbar.tsx
src/services/: ipc.ts  notifications.ts  tour.ts
src/styles/: global.css
src/types/: constants.ts  index.ts  placeholders.ts
src/utils/: index.ts
