[package]
name = "cant-stop"
version = "0.1.0"
description = "Frog themed push your luck rolling game."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cant_stop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
tauri = { version = "^2", features = [] }
tauri-plugin-opener = "^2"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
anyhow = "^1"
rand = "0.9"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
